# neoterminal

./: .gitignore  CMakeLists.txt
src/: application.cc  application.h  keycodes.cc  keycodes.h  main.cc  msgpack_rpc.cc  msgpack_rpc.h  nvim_controller.cc  nvim_controller.h  nvim_ui_calc.cc  nvim_ui_calc.h  nvim_ui_state.cc  nvim_ui_state.h  nvim_ui_widget.cc  nvim_ui_widget.h  term_controller.cc  term_controller.h  term_ui.cc  term_ui.h  term_ui_state.cc  term_ui_state.h  term_ui_widget.cc  term_ui_widget.h  term_widget.cc  term_widget.h
